--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-background-color:green;
-class(cabecalho);
-text-align: center;
+.background-color:azul;
+.color: verde
+
+
