--- a/assets/read.css
+++ b/assets/read.css
@@ -1,8 +1,9 @@
-@import url(reset.css);
-@import url(header.css);
-@import url(banner.css);
-@import url(carrossel.css);
-@import url(topicos.css);
+@import url(holly.css);
+@import url(style.css);
+@import url(lux.css);
+@import url(meta.css);
+@import url(ordem.css);
+import url(reat.css);
 
 :root{
     --branco: #ffffff;
